# encryptor

./: CLAUDE.md  CREATE-PR.md  INSTALL.md  LICENSE  Makefile  README.md  encryptor-claude.md  instructions.md  pyproject.toml
docs/: user-guide.md
encryptor/: __init__.py  cli.py  crypto.py  fileops.py
scripts/: score_architecture.py
tests/: conftest.py  test_cli.py  test_crypto.py  test_fileops.py
